# Secure_Remote_Agent

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEMO_SUMMARY.md  README.md  build.bat  github_update.json  update_github.ps1
app/: main.cpp  main.qml
core/: network_client.h
demo/: README.md  demo_orchestrator.py  run_demo.bat  run_demo.sh
demo/backend/: demo_server.py  requirements.txt
demo/backend/templates/: dashboard.html
docs/: index.html  mermaid-height-util.js
include/components/app/: ui_manager.h
include/components/service/: service_controller.h  service_source_impl.h
include/config/: constants.h
include/core/: ipc_client.h  ipc_server.h  network_client.h  remote_executor.h
include/plugins/loader/: plugin_interface.h
include/plugins/proxy/: proxy_plugin.h  proxy_server.h
include/plugins/scraper/: scraper.h  scraper_plugin.h
installer/: build_installer.bat  installer.wxs
proxy/: proxy_server.cpp  proxy_server.h
scraper/: scraper.h
service/: service_main.cpp
src/components/agent/: CMakeLists.txt  agent.cpp
src/components/app/: CMakeLists.txt  main.cpp  main.qml  ui_manager.cpp  ui_manager.h
src/components/service/: CMakeLists.txt  service.cpp  service_controller.cpp  service_controller.h  simulator.cpp  windows_service.cpp
src/core/: CMakeLists.txt  ServiceInterface.rep  ipc_client.cpp  ipc_client.h  ipc_server.cpp  network_client.cpp  network_client.h  remote_executor.cpp  remote_executor.h
src/plugins/loader/: CMakeLists.txt  plugin_interface.h  plugin_loader.cpp  sample_plugin.cpp
src/plugins/proxy/: CMakeLists.txt  proxy_plugin.cpp  proxy_plugin.h  proxy_plugin.json
src/plugins/scraper/: CMakeLists.txt  scraper_plugin.cpp  scraper_plugin.h  scraper_plugin.json  scraper_plugin_main.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  main.cpp  test_ipc_integration.cpp  test_network_tls_integration.cpp  test_plugin_integration.cpp  test_service_integration.cpp  test_tls_integration.cpp
tests/unit/: CMakeLists.txt  main.cpp  test_ipc_client.cpp  test_network_tls.cpp  test_plugin_interface.cpp  test_service_main.cpp  test_ui_manager.cpp
